Minor improvements for command handling